<resources>
    <string name="app_name">Temperature Converter</string>
    <string name="enter_your_value">Enter your Value</string>
    <string name="enter_value">Enter value</string>
    <string name="degree">®</string>
    <string name="converted_value_will_show_here">Converted Value will show here</string>
    <string name="convert">Convert</string>
    <string name="degree_celcius">℃</string>
    <string name="degree_farhenheit">℉</string>
    <string name="swap_degree">swap degree</string>
    <string name="clear">Clear</string>
</resources>